# mape

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  codecov.yml  plan.md  pyproject.toml
.cache/clangd/index/: autodiff.hpp.DB02E1C802FA8A09.idx  binomial.hpp.337EB66BCE07917D.idx  black_scholes.hpp.606DED2D2C9B2A66.idx  black_scholes_ad.hpp.3D635A0E2FD60E9C.idx  c_smoke_test.c.3BBB70AD1F39D634.idx  concepts.hpp.29872E87A296079C.idx  exotic.hpp.0E1002329F32D8F6.idx  fixed_income.hpp.0FCB5406185A6E76.idx  instruments.hpp.9B213549ADBA678D.idx  mape.hpp.DE748955869B0DEA.idx  mape_c_api.cpp.0FC1A76256061DE8.idx  mape_c_api.h.3547835CD45B0737.idx  market_data.hpp.E91F96C498DFA509.idx  monte_carlo.hpp.407E495B029B0E6E.idx  parallel_mc.hpp.363EDCBB7315CC6E.idx  path_monte_carlo.hpp.13CB0F118AD1EFF8.idx  portfolio.hpp.3BB1BBEA7EFE4BB2.idx  pricer.hpp.1AC8E3F8D3B5C24D.idx  test_main.cpp.1FF20CF9C00BC8B5.idx  thread_pool.hpp.07CFF34F61C68E5C.idx
.github/workflows/: ci.yml  static-analysis.yml
bench/: .clang-tidy  CMakeLists.txt  bench_main.cpp  bench_util.hpp
bench/results/: baseline.csv
core/: CMakeLists.txt
core/include/mape/: autodiff.hpp  calibration.hpp  compile_time.hpp  concepts.hpp  counter_rng.hpp  ct_math.hpp  exotic.hpp  generator.hpp  greeks_mixin.hpp  implied_vol.hpp  instruments.hpp  mape.hpp  market_data.hpp  market_types.hpp  portfolio.hpp  portfolio_compile_time.hpp  pricer.hpp  pricing_result.hpp  risk.hpp  variance_reduction.hpp
core/include/mape/models/: binomial.hpp  black_scholes.hpp  black_scholes_ad.hpp  finite_difference.hpp  fixed_income.hpp  lazy_monte_carlo.hpp  monte_carlo.hpp  path_monte_carlo.hpp
core/include/mape/threading/: parallel_mc.hpp  sync_primitives.hpp  thread_pool.hpp
core/tests/: test_compile_time.cpp  test_main.cpp
data/: schema.sql
docs/: README.md  architecture.md  building.md  cpp-codemap.md  cpp-design.md  cpp20-concepts.md  study-guide.md  user-guide.md
docs/adr/: 0001-header-only-core.md  0002-c-abi-boundary.md  0003-rust-egui-gui.md  README.md
ffi/: CMakeLists.txt
ffi/include/: mape_c_api.h
ffi/src/: mape_c_api.cpp
ffi/tests/: c_smoke_test.c  fuzz_c_api.cpp
gui/: Cargo.toml  build.rs
gui/src/: bridge.rs  data.rs  main.rs
scripts/: build_and_test.sh  check_abi_consistency.py  check_bench_regression.py  fetch_data.py  format.sh
src/mape_data/: __init__.py  fetch_data.py
