[project]
name = "mape-data"
version = "0.1.0"
description = "Market-data fetcher for the multi-asset pricing engine (yfinance -> SQLite)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.40",
]

# `uv run fetch-data AAPL MSFT` -> scripts/fetch_data.py:main
[project.scripts]
fetch-data = "fetch_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The fetcher is a single module living in scripts/ (alongside non-Python files
# like build_and_test.sh). `force-include` maps the source file to an exact
# top-level module name in the installed environment, so `from fetch_data
# import main` resolves unambiguously regardless of what else is in scripts/.
[tool.hatch.build.targets.wheel]
force-include = { "scripts/fetch_data.py" = "fetch_data.py" }

[tool.uv]
# Dev-only conveniences can go here later (e.g. ruff, pytest). Kept minimal.
package = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# A pragmatic set: pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B),
# and pyupgrade (UP). The fetcher is small; this keeps it tidy without fuss.
select = ["E", "W", "F", "I", "B", "UP"]
