[project]
name = "mape-data"
version = "0.1.0"
description = "Market-data fetcher for the multi-asset pricing engine (yfinance -> SQLite)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "yfinance>=0.2.40",
]

# `uv run fetch-data AAPL MSFT` -> src/mape_data/fetch_data.py:main
[project.scripts]
fetch-data = "mape_data.fetch_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The fetcher lives in its own package directory (src/mape_data/) so that an
# editable install ("uv sync") puts the *source* on the import path — edits to
# fetch_data.py then take effect immediately, no rebuild or --reinstall needed.
[tool.hatch.build.targets.wheel]
packages = ["src/mape_data"]

[tool.uv]
# Install this project itself as an editable package.
package = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# A pragmatic set: pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B),
# and pyupgrade (UP). The fetcher is small; this keeps it tidy without fuss.
select = ["E", "W", "F", "I", "B", "UP"]
